# occa

./: CITATION.cff  CMakeLists.txt  configure-cmake.sh
.github/workflows/: cff-validator.yml  clf.yml
cmake/: CheckRequiredCompilerFeatures.cmake  ExportAndPackageConfig.cmake  FindDPCPP.cmake
examples/cpp/07_streams/: main.cpp
examples_new/C++/: 00_device_selection.cpp  01_device_selection.cpp  01_memory_management.cpp  02_kernels  02_kernels.cpp  02_memory_management.cpp  04_jitting.cpp  CMakeLists.txt  README.md  kernel01-intro.okl  kernel02-loops.okl  kernel03-sync.okl  kernel04-atomics.okl  kernel05-atomics.okl  kernel05-math.okl  kernel06-math.okl  oldruntime04-kernels.cpp  run-kernel-examples.cpp  runtime01-devices.cpp  runtime02-memory.cpp  runtime03-kernels.cpp  runtime04-jitting.cpp  runtime04-streams.cpp  runtime05-jitting.cpp  runtime05-streams.cpp  runtime06-memoryPools.cpp
examples_new/C++/kernels/: addVectors.okl  axpy_defines.okl  daxpy.okl  define_required_axpy.okl  reduction.okl
examples_new/C++/runtime_examples_kernels/: daxpy.okl
include/occa/core/: device.hpp  memoryPool.hpp
new-examples/: runtime01-devices.cpp  runtime02-memory.cpp  runtime03-kernels.cpp  runtime04-streams.cpp
src/: CMakeLists.txt
src/c/: CMakeLists.txt
src/core/: CMakeLists.txt  device.cpp  memoryPool.cpp
src/dtype/: CMakeLists.txt
src/experimental/: CMakeLists.txt
src/fortran/: CMakeLists.txt
src/functional/: CMakeLists.txt
src/loops/: CMakeLists.txt
src/occa/internal/: CMakeLists.txt
src/occa/internal/api/: CMakeLists.txt
src/occa/internal/c/: CMakeLists.txt
src/occa/internal/core/: CMakeLists.txt  device.hpp
src/occa/internal/functional/: CMakeLists.txt
src/occa/internal/io/: CMakeLists.txt
src/occa/internal/lang/: CMakeLists.txt
src/occa/internal/lang/builtins/: CMakeLists.txt
src/occa/internal/lang/builtins/attributes/: CMakeLists.txt
src/occa/internal/lang/expr/: CMakeLists.txt
src/occa/internal/lang/loaders/: CMakeLists.txt
src/occa/internal/lang/modes/: CMakeLists.txt
src/occa/internal/lang/statement/: CMakeLists.txt
src/occa/internal/lang/token/: CMakeLists.txt
src/occa/internal/lang/type/: CMakeLists.txt
src/occa/internal/modes/: CMakeLists.txt
src/types/: CMakeLists.txt
src/utils/: CMakeLists.txt
tests/src/core/: device.cpp  memoryPool.cpp  stream.cpp
(+36 files in other folders)
